=========
CHANGELOG
=========

2.4.3+dev  (XXXX-XX-XX)
=======================

*


2.4.3      (2022-04-08)
=======================

* Replace french column name to english column name


2.4.2      (2022-03-29)
=======================

** Fixes **

* Fix js init mode embed type should be File and not Youtube


2.4.1      (2022-03-18)
=======================

** Fixes **

* Fix form enable_link javascript


2.4.0      (2022-01-10)
=======================

** New **

* Support Django 4.0


2.3.4 (2021-12-13)
=======================

**New features**

- Add PAPERCLIP_RESIZE_ATTACHMENTS_ON_UPLOAD setting to enable resize attachments on upload
- Add PAPERCLIP_MAX_ATTACHMENT_WIDTH and PAPERCLIP_MAX_ATTACHMENT_HEIGHT to configure attachment resizing (defaults 1280px)
 

2.3.3      (2021-09-03)
=======================

** New **

* Display custom columns in attachment list

2.3.2 (2021-06-09)
==================

* Add a bootstrap-4-confirm


2.3.1 (2021-06-03)
==================

** New **

* Support django 3.2 and python 3.9
* Drop support Python 3.5


2.2.6 (2020-11-24)
==================

** New **

* Support for django 3.1


2.2.5 (2020-05-15)
==================

** New **

* Support for django 2.2 and 3.0
* Drop Django 1.11, 2.0, 2.1 and python 2 support
* Set automatic is_image db column

2.2.4 (2020-03-10)
==================

** Fixes **

* Show attachment file, video or link widget as required


2.2.3 (2019-12-31)
==================

** Fixes **

* Fix requirements for Django 2


2.2.2 (2019-10-08)
==================

** Fixes **

* Do not set author to current username by default
* Fix mode preselection


2.2.1 (2019-01-07)
==================

** Fixes **

* Fix permissions change, delete and delete_others


2.2.0 (2018-11-07)
==================

** New **

* Support Python3, Django 2.0 and 2.1
* Drop Django 1.8, 1.9 and 1.10 support


2.1.2 (2018-03-25)
==================

** New **

* Support Django 1.8 to 1.11


2.1.1 (2017-03-23)
==================
