@@ -1,0 +1,20 @@
+# Generated by Django 3.2.12 on 2022-04-22 15:20
+
+from django.db import migrations, models
+import django.db.models.deletion
+
+
+class Migration(migrations.Migration):
+
+    dependencies = [
+        ('paperclip', '__first__'),
+        ('test_app', '0004_auto_20220405_1602'),
+    ]
+
+    operations = [
+        migrations.AddField(
+            model_name='attachment',
+            name='license',
+            field=models.ForeignKey(blank=True, null=True, on_delete=django.db.models.deletion.SET_NULL, to='paperclip.license', verbose_name='License'),
+        ),
+    ]
