@@ -5,7 +5,9 @@ CHANGELOG
 2.4.3+dev  (XXXX-XX-XX)
 =======================
 
-*
+** New **
+
+* Add field license on attachment
 
 
 2.4.3      (2022-04-08)
